--- a/app/src/main/res/layout/home_item_layout.xml
+++ b/app/src/main/res/layout/home_item_layout.xml
@@ -36,7 +36,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="132dp"
         android:background="@drawable/rectangle_background">
 
         <TextView
@@ -45,9 +45,13 @@
             android:layout_height="wrap_content"
             android:text="Texto"
             android:textAlignment="center"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="188dp"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.117"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/wishlistDescription"
@@ -57,8 +61,10 @@
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/wishlistName"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.352"
             tools:ignore="MissingConstraints" />
 
         <ImageView
@@ -66,9 +72,13 @@
             android:layout_width="101dp"
             android:layout_height="72dp"
             android:src="@drawable/ic_profile"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="19dp"
-            tools:layout_editor_absoluteY="48dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.051"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.493"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:id="@+id/changeMyName"
@@ -76,16 +86,24 @@
             android:layout_height="wrap_content"
             android:text="Texto"
             android:textAlignment="center"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="188dp"
-            tools:layout_editor_absoluteY="120dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.786"
+            tools:ignore="MissingConstraints" />
 
         <CheckBox
             android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="359dp"
-            tools:layout_editor_absoluteY="107dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.997"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.982"
+            tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
